Initial work done, but Asm::Token template member functions need replacing.

--- a/Ag/Core/CMakeLists.txt
+++ b/Ag/Core/CMakeLists.txt
@@ -29,6 +29,7 @@ add_ag_library(AgCore SOURCES   CoreInternal.hpp
                                 FsSearchPathList.cpp
                                 FsDirectory.cpp
                                 Uri.cpp
+                                Platform.hpp
                                 ${AG_INCLUDE_DIR}/Ag/Core/Configuration.hpp
                                 ${AG_INCLUDE_DIR}/Ag/Core/EnumInfo.hpp
                                 ${AG_INCLUDE_DIR}/Ag/Core/Utils.hpp
