--- a/ArmEmu/CMakeLists.txt
+++ b/ArmEmu/CMakeLists.txt
@@ -21,7 +21,7 @@ add_ag_library(ArmEmu   FOLDER      ARM
                                     TestSystem.hpp
                                     TestSystem.cpp
                         HEADERS     ${MO_INCLUDE_DIR}/ArmEmu.hpp
-                        PUBLIC_LIBS AgCore)
+                        PUBLIC_LIBS AgCore AsmTools)
 
 if(DEFINED CMAKE_ASM_MASM_COMPILER AND "${USE_ASM}")
     target_sources(ArmEmu PRIVATE AluOperations_Win32_x64.asm)
@@ -40,3 +40,29 @@ add_ag_test_app(ArmEmu_Tests    TEST_LIB ArmEmu
 
 # We need the assembly language tools to perform the tests.
 target_link_libraries(ArmEmu_Tests PRIVATE AsmTools)
+
+add_cli_app(EmuPerf_Test FOLDER ARM
+                         NAME "EmuPerfTest"
+                         DESCRIPTION "Measures the performance of different emulated system configurations."
+                         VERSION "${PROJECT_VERSION}"
+                         SOURCES EmuPerfTest_Main.cpp
+                         LIBS AgCore ArmEmu)
+
+set(DhyrstoneSourceIn "${CMAKE_CURRENT_SOURCE_DIR}/../Tests/ArmEmu/Dhrystone2_1.arm")
+
+cmake_path(ABSOLUTE_PATH DhyrstoneSourceIn
+           NORMALIZE OUTPUT_VARIABLE DhrystoneSource)
+
+# Add a custom command to assemble the Dhrystone source code into
+# ARM machine code.
+add_custom_command(OUTPUT "${CMAKE_CURRENT_BINARY_DIR}/Dhrystone.bin"
+                   COMMAND AAsm
+                   ARGS "${DhrystoneSource}" "-o"
+                        "${CMAKE_CURRENT_BINARY_DIR}/Dhrystone.bin"
+                   DEPENDS "${DhrystoneSource}"
+                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+                   COMMENT "Assembling ${DhrystoneSource}...")
+
+# Embed the ARM machine code in the program source code.
+add_static_data(EmuPerf_Test "DhrystoneProgram.hpp" BINARY
+                SOURCES "${CMAKE_CURRENT_BINARY_DIR}/Dhrystone.bin")
