Refactor/processor core to templates (#7)
* Refactor original emulator core to use templates.

* Cleaned up project files after refactor.

* Linux build fixes.

* Improved metrics reporting, documented performance improvements and added Linux _DEBUG definition.

* Fixed Linux build flag and added metrics.

--- a/ArmEmu/CMakeLists.txt
+++ b/ArmEmu/CMakeLists.txt
@@ -3,37 +3,62 @@
 # Define the library.
 add_ag_library(ArmEmu   FOLDER      ARM
                         SOURCES     ArmCore.hpp
+                                    ArmCore.cpp
                                     IrqSink.hpp
-                                    SystemResources.hpp
-                                    SystemResources.cpp
-                                    ArmEmu.cpp
-                                    Hardware.hpp
-                                    Hardware.cpp
-                                    RegisterFile.hpp
-                                    RegisterFile.cpp
+                                    Hardware.inl
+                                    TestBedHardware.inl
+                                    RegisterFile.inl
+                                    ARMv2CoreRegisterFile.inl
+                                    AluInstructions.inl
                                     AluOperations.h
-                                    ArithmeticLogicUnit.hpp
-                                    ArithmeticLogicUnit.cpp
-                                    DataTransfer.hpp
-                                    DataTransfer.cpp
-                                    InstructionPipeline.hpp
-                                    InstructionPipeline.cpp
-                                    TestSystem.hpp
-                                    TestSystem.cpp
+                                    DataTransferInstructions.inl
+                                    InstructionPipeline.inl
+                                    ExecutionUnit.inl
+                                    SystemConfigurations.inl
+                                    ArmSystem.inl
+                                    ArmEmu.cpp
                         HEADERS     ${MO_INCLUDE_DIR}/ArmEmu.hpp
-                        PUBLIC_LIBS AgCore AsmTools)
+                        PUBLIC_LIBS AgCore)
 
 if(DEFINED CMAKE_ASM_MASM_COMPILER AND "${USE_ASM}")
     target_sources(ArmEmu PRIVATE AluOperations_Win32_x64.asm)
+    source_group(Emulation FILES AluOperations_Win32_x64.asm)
 else()
     target_sources(ArmEmu PRIVATE AluOperations_NoArch.cpp)
+    source_group(Emulation FILES AluOperations_NoArch.cpp)
 endif()
+
+source_group(Tools FILES
+             ArmCore.hpp
+             ArmCore.cpp)
+
+source_group(Emulation FILES
+             Hardware.inl
+             TestBedHardware.inl
+             RegisterFile.inl
+             ARMv2CoreRegisterFile.inl
+             AluInstructions.inl
+             AluOperations.h
+             DataTransferInstructions.inl
+             InstructionPipeline.inl
+             ExecutionUnit.inl
+             SystemConfigurations.inl
+             ArmSystem.inl)
+
+source_group(Interface FILES
+             IrqSink.hpp
+             ${MO_INCLUDE_DIR}/ArmEmu.hpp)
 
 # Define the unit test harness.
 add_ag_test_app(ArmEmu_Tests    TEST_LIB ArmEmu
                                 SOURCES  TestTools.cpp
                                          TestTools.hpp
+                                         TestConstraints.cpp
+                                         TestConstraints.hpp
+                                         Test_Constraints.cpp
                                          Test_Core.cpp
+                                         Test_RegisterFile.cpp
+                                         Test_Hardware.cpp
                                          Test_AluOperations.cpp
                                          Test_ALU.cpp
                                          Test_DataTransfer.cpp)
@@ -46,9 +71,9 @@ add_cli_app(EmuPerf_Test FOLDER ARM
                          DESCRIPTION "Measures the performance of different emulated system configurations."
                          VERSION "${PROJECT_VERSION}"
                          SOURCES EmuPerfTest_Main.cpp
-                         LIBS AgCore ArmEmu)
+                         LIBS AgCore AsmTools ArmEmu)
 
-set(DhyrstoneSourceIn "${CMAKE_CURRENT_SOURCE_DIR}/../Tests/ArmEmu/Dhrystone2_1.arm")
+set(DhyrstoneSourceIn "${PROJECT_SOURCE_DIR}/Tests/ArmEmu/Dhrystone2_1.arm")
 
 cmake_path(ABSOLUTE_PATH DhyrstoneSourceIn
            NORMALIZE OUTPUT_VARIABLE DhrystoneSource)
