--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,10 @@ if (DEFINED MSVC)
     add_compile_options("/W4")
 else()
     add_compile_options(-Wall -Wextra -pedantic -Wshadow)
+    
+    # Ensure _DEBUG is defined for debug builds, this is done automatically
+    # for MSVC.
+    add_compile_definitions($<$<CONFIG:Debug>:_DEBUG>)
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/cmake/Utilities.cmake")
